test/compile-fail/resolution/conflicts/fields/expected.txt
error: the field `a` is defined multiple times
 --> top.rhdl:2:17
  |
2 | struct b { a: a, a: a }
  |            - previous definition of the field `a` here
2 | struct b { a: a, a: a }
  |                  ^ `a` redefined here
